@@ -1,5 +1,10 @@
 2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Headers/Foundation/CFBase.h:
+	* Source/GNUmakefile: Do not define MAC_OS_X_VERSION_MIN_ALLOWED.
+
+2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFString.c:
 	* Source/CFBase.c:
 	* Source/CFStringFormat.c:
